[project]
name = "dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Dilshan Samarakoon",email = "dilshansamarakoon2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib (>=1.4.2,<2.0.0)",
    "streamlit (>=1.44.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "streamlit-authenticator (>=0.4.2,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
